--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
 	"description": "Async Iterable Iterators Mapping",
 	"main": "src/index.js",
 	"scripts": {
-		"test": "xutltest"
+		"test": "xutltest",
+		"build": "tsc",
+		"prepublishOnly": "npm run build"
 	},
 	"repository": {
 		"type": "git",
@@ -21,6 +23,8 @@
 	},
 	"homepage": "https://xutl.es",
 	"devDependencies": {
+		"@types/node": "^14.0.14",
+		"@xutl/test": "^1.0.2",
 		"typescript": "^3.9.5"
 	}
 }
